Closing window stops video playback but not audio #69355

Closed
opened 2019-08-31 14:01:17 +02:00 by ChristopherAnderssarian · 7 comments

System Information
Operating system: Windows 7
GPU: Radeon Vega 64, Divider version: 19.4.1
CPU: Intel Core i7-5960X

Blender Version
Broken: 2.80, blender-2.81.0-git.6726e98fe2a6-windows64

Short description of error

If you have a seperate window from where you start animation, parts of that it will stop and some will continue
When playing this animation from the window and then closing said window, audio keeps playing but the picture doesn't.

Exact steps for others to reproduce the error

  • Open .blend

  • Start animation in window

  • Close window

  • Audio keeps playing when you click 'Jump to First Frame'

Video stops playing.blend

**System Information** Operating system: Windows 7 GPU: Radeon Vega 64, Divider version: 19.4.1 CPU: Intel Core i7-5960X **Blender Version** Broken: 2.80, `blender-2.81.0-git.6726e98fe2a6-windows64` **Short description of error** If you have a seperate window from where you start animation, parts of that it will stop and some will continue When playing this animation from the window and then closing said window, audio keeps playing but the picture doesn't. **Exact steps for others to reproduce the error** - Open .blend - Start animation in window - Close window - Audio keeps playing when you click 'Jump to First Frame' [Video stops playing.blend](https://archive.blender.org/developer/F7711865/Video_stops_playing.blend)

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

Exact Steps:

Audio is still still playing until end however, animation in VSE stops (see on prev window's VSE)

**Exact Steps:** * **Open** provided file: [Video Stops Playing.blend](https://archive.blender.org/developer/F7712912/Video_Stops_Playing.blend) * **Play Animation** (spacebar) in **small second window** * **Close** Window: ![image.png](https://archive.blender.org/developer/F7712913/image.png) **Audio is still still playing until end** however, **animation** in VSE **stops** (see on **prev window's VSE**)

Added subscriber: @iss

Added subscriber: @iss
Campbell Barton was assigned by Richard Antalik 2019-09-16 04:14:13 +02:00

Animation is actually still running as evidenced by displayed FPS meter after window is closed.
Also Anim Player is not displayed in progressbar when playback is started in "child" window

I quess window manager should be responsible for this..

Animation is actually still running as evidenced by displayed FPS meter after window is closed. Also Anim Player is not displayed in progressbar when playback is started in "child" window I quess window manager should be responsible for this..

This issue was referenced by cd236bc22d

This issue was referenced by cd236bc22d44cca01eef99a4ea36c0dcc13abb12

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69355
No description provided.