Fix T69355: Closing window stops video but not audio